# stopit2

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.rst  pyproject.toml  tests.py
.github/workflows/: macos.yml  pyodide.yml  release.yml  test.yml  ubuntu.yml  windows.yml
src/stopit/: __init__.py  threadstop.py  utils.py
src/stopit2/: __init__.py  signalstop.py  threadstop.py  utils.py
tests/: test_readme.py  test_threading_timeout.py
